# JudgeJudy

./: .gitignore  README.md
myproject/: README.md  client.py  main.py  pyproject.toml
myproject/back-end/: app.py  judge_eval.py
myproject/front-end/: chatbot_test.py
myproject/front-end/react_landing_page/: package-lock.json  package.json
myproject/front-end/react_landing_page/src/: App.css  App.jsx  index.css
myproject/front-end/react_landing_page/src/components/: ChatInput.jsx  TextBox.jsx
myproject/front-end/react_landing_page/src/funcs/: backend.jsx
myproject/front-end/react_landing_page/src/styles/: textBox.module.css
