[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "google-genai>=2.8.0",
    "gradio>=6.18.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
